--- a/apps/cruxi/src/index.html
+++ b/apps/cruxi/src/index.html
@@ -7,8 +7,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
-  <body style="margin: 0px;">
+  <body style="margin: 0px; font-family: 'Rubik', sans-serif;">
     <div id="root"></div>
   </body>
 </html>
